# ADFlib

./: CMakeLists.txt
doc/: CMakeLists.txt
examples/: CMakeLists.txt  unadf.c
regtests/Test/: CMakeLists.txt
src/: CMakeLists.txt  adf_blk.h  adf_defs.h  adf_dir.h  adf_disk.c  adf_hd.c
